<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.valerov.dinner.SecondActivity">


    <TextView
        android:id="@+id/textView_headersecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Makan Malam"
        android:textSize="50dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textView_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_headersecond"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/textView_headermenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_place"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/textView_headermenu"
        />

    <TextView
        android:id="@+id/textView_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_headermenu"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/textView_headerporsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/textView_headerporsi"
        />

    <TextView
        android:id="@+id/textView_porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_headerporsi"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <TextView
        android:id="@+id/textView_headerharga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_porsi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/textView_headerharga"
        />

    <TextView
        android:id="@+id/textView_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_headerharga"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />


</RelativeLayout>
